Fix content centering css issue
Fixed the html content centering css issue where the login and sign up pages were not centered correctly by adding a seperate .content--flex class to the css.

--- a/Crawlspace-app/static/css/main.scss
+++ b/Crawlspace-app/static/css/main.scss
@@ -59,6 +59,10 @@ main {
     width: 40em;
 }
 
+#content--flex {
+    width: auto;
+}
+
 .container--form  {
     display: flex;
     flex-direction: column;
